[gd_scene load_steps=5 format=3 uid="uid://d0jdgx6p7oksp"]

[ext_resource type="PackedScene" uid="uid://bghg4cc4p4p7q" path="res://escenas/Modelos base (mapas y player)/player.tscn" id="1_rqb46"]
[ext_resource type="Script" uid="uid://g5nvnw4moxfy" path="res://scripts/Clase_francotirador.gd" id="2_rqb46"]
[ext_resource type="Script" uid="uid://dh02ij7qaybln" path="res://scripts/sniper.gd" id="3_k6pde"]
[ext_resource type="Texture2D" uid="uid://poyd5hemmmgb" path="res://sprites/sniper2_resized.png" id="4_d7bnk"]

[node name="Player" instance=ExtResource("1_rqb46")]
script = ExtResource("2_rqb46")

[node name="CollisionShape2D" parent="." index="0"]
scale = Vector2(0.75, 0.75)

[node name="Gun" parent="." index="2"]
position = Vector2(12, 0)
script = ExtResource("3_k6pde")
SPEED = 400
BOUNCES = 1
DANIO = 7
PELLETS = 1

[node name="Sprite2D" parent="Gun" index="0"]
position = Vector2(3, 1)
texture = ExtResource("4_d7bnk")

[node name="Marker2D" parent="Gun" index="1"]
position = Vector2(20, 0)

[node name="AltTimer" type="Timer" parent="Gun" index="2"]
wait_time = 2.25

[node name="Timer" parent="Gun" index="3"]
wait_time = 1.5

[node name="Escudo" parent="." index="3"]
scale = Vector2(0.6, 0.6)

[node name="ProgressBar" parent="." index="4"]
offset_top = -17.0
offset_bottom = -4.0

[connection signal="timeout" from="Gun/AltTimer" to="Gun" method="_on_alt_timer_timeout"]

[editable path="Gun"]
[editable path="Panel/HBoxContainer/AbilityButton"]
